--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "bootstrap": "4.1.1",
+    "moment": "^2.24.0",
     "ngrx-data": "^6.1.0-beta.3",
+    "ngrx-store-localstorage": "^8.0.0",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
